--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
 
 before_install:
   - echo "[BEFORE INSTALL]"
-  - pip3 install mkdocs mkdocs-material pygments pymdown-extensions
+  - pip install mkdocs mkdocs-material pygments pymdown-extensions
 
 script:
   - echo "[SCRIPT]" 
