--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
 
 before_install:
   - echo "[BEFORE INSTALL]"
+  - pip install --upgrade pip
   - pip install mkdocs mkdocs-material pygments pymdown-extensions
 
 script:
